// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iBkjds fcZjmq"
>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iBkjds fcZjmq"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iBkjds fcZjmq"
>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-ftvSup ghczXM"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
